GUI fixups, primarily pulldown menu corrections